# edgeai-bot

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: release-changelog-config.json
.github/workflows/: release.yml
.husky/: commit-msg
scripts/: install.ps1  install.sh
src/: audit.rs  claude_mcp.rs  main.rs  output.rs
src/cli/: claude_mcp.rs  config.rs  exec.rs  init.rs  logs.rs  mod.rs  run.rs  serve.rs
src/commands/: mod.rs
src/config/: mod.rs
src/llm/: mod.rs
src/session/: mod.rs
src/shell/: mod.rs
src/transport/: telegram.rs
